--- a/front/index.html
+++ b/front/index.html
@@ -39,4 +39,43 @@ e agrega ao corpo do HTML-->
 </html>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-<script src="index.js"></script>
+<script>
+    //o qual passa a resposta da função dataResult() que através do INNERHTML anexa ao código HTML da pagina
+    const getData = (e) => {
+        e.preventDefault();
+        e.stopPropagation();
+        const ip = document.getElementById("ip-input").value;
+        axios.get(`http://localhost:3000/${ip}`).then((response) => {
+            dataResult(response.data);
+        }).catch((error) => console.log(error));
+    };
+
+    /*Aguarda o elemento de id "search-button" para realizar a ação de envio do endereço IP para o backend*/
+    const searchButton = document.getElementById("search-button");
+    searchButton.addEventListener("click", getData);
+
+
+    const returnData = (r) => {
+        r.preventDefault();
+        r.stopPropagation();
+        axios.post("http://localhost:3000/log").then((response) =>{
+            console.log(JSON.stringify(response.data));
+            var prettyPrint = JSON.stringify(response.data, null, 4); 
+            document.body.innerHTML = "<p class=\"overflow-style\">" + "<pre>" + prettyPrint + "</pre>" + "</p>";
+            //document.getElementById('fieldReceiveData').innerHTML = "<p class=\"overflow-style\">" + JSON.stringify(response.data) + "</p>";
+        }).catch((error) => console.log("Esse erro esta no front! " + error));
+    };
+
+    const logButton = document.getElementById("log-button");
+    logButton.addEventListener("click", returnData);
+
+    //Função responsavel por tratar o retorno da API-Location
+    function dataResult(responseData){
+        document.getElementById('fieldReceiveData').innerHTML = "<span class=\"test_style\">" + "IP: " + responseData['ip'] + "<br>" +
+        "País: " + responseData['country'] + "<br>" +
+        "Cidade: " + responseData['city'] + "<br>" +
+        "Estado: " + responseData['regionName'] + "<br>" +
+        "Latitude: " + responseData['latitude'] + "<br>" +
+        "Longitude: " + responseData['longitude'] + "</span>";
+    };
+</script>
