Função adicionar() concluída

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,14 @@
         <button onclick="setHouse('hufflepuff')" >Hufflepuff</button>
     </div>
 
+    <form action = "/favoritos" name = "formulario" method = "post">
+        <button id="favoritos-btn">Histórico</button> 
+    </form>
+    
+    <form  name = "formulario" method = "dialog">
+        <button onclick="adicionar()" id="escolher-btn">Adicionar</button>
+    </form>
+
     <script src="script.js"></script>
 </body>
 
