FIX: Ajustes finais

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Harry Potter</title>
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet"> 
@@ -29,12 +30,8 @@
         <button onclick="setHouse('hufflepuff')" >Hufflepuff</button>
     </div>
 
-    <form action = "/favoritos" name = "formulario" method = "post">
+    <form action = "/favoritos" method = "post">
         <button id="favoritos-btn">Histórico</button> 
-    </form>
-    
-    <form  name = "formulario" method = "dialog">
-        <button onclick="adicionar()" id="escolher-btn">Adicionar</button>
     </form>
 
     <script src="script.js"></script>
